--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
             <h3 class="h_m">Dynamic Healing Techniques</h3>
           </div>
           <div class="home_card-line"></div>
-          <div class="t-md t-grey"><span class="t-white">September 23 and 24, 2023</span> in Waterloo, ON<br>For more information, contact <a href="http://joe@joehiscott.com" class="t-link-home">Joe Hiscott</a>
+          <div class="t-md t-grey">If you are interested in a Level 1 Training Weekend in Kitchener-Waterloo area, contact <a href="http://joe@joehiscott.com" class="t-link-home">Joe Hiscott</a>
             <a href="#" class="t-link"></a>
           </div>
         </div>
