--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
             <h3 class="h_m">Dynamic Healing Techniques</h3>
           </div>
           <div class="home_card-line"></div>
-          <div class="t-md t-grey">If you are interested in a Level 1 Training Weekend in Kitchener-Waterloo area, contact <a href="http://joe@joehiscott.com" class="t-link-home">Joe Hiscott</a>
+          <div class="t-md t-grey">CFQ Level 1 Training in Kitchener-Waterloo area September 21st and 22nd 2024, for more details contact <a href="http://joe@joehiscott.com" class="t-link-home">Joe Hiscott</a>
             <a href="#" class="t-link"></a>
           </div>
         </div>
