--- a/cabin-en.html
+++ b/cabin-en.html
@@ -61,7 +61,7 @@
         </div>
         <div class="body_card-line"></div>
         <div class="cabin_card-w"><img src="images/cabin.webp" loading="eager" sizes="(max-width: 991px) 100vw, 40vw" srcset="images/cabin-p-500.webp 500w, images/cabin-p-800.webp 800w, images/cabin-p-1080.webp 1080w, images/cabin.webp 1452w" alt="" class="img-cabin">
-          <p class="t-lg">A cabin surrounded by forest near Wakefield QC is available for rent between mid-June through mid-October. The cabin is equipped with wood stove, butane cooking stove, dishes, pots, pans, utensils, bed and pillows, linens, blankets, water dispenser and sink.  Outhouse and outdoor shower/bathing facilities are nearby.<br><br>Cabin rental $50/night, $300/week.     <br><br>For longer-term stay, to combine with private training/appointments or custom arrangements, we can create the program together to suit your needs.<br><br>To inquire or to make a reservation <a href="http://joe@joehiscott.com" class="t-link">contact Joe</a>
+          <p class="t-lg">A cabin surrounded by forest near Wakefield QC is available for rent between mid-June through mid-October. The cabin is equipped with wood stove, butane cooking stove, dishes, pots, pans, utensils, bed and pillows, linens, blankets, water dispenser and sink.  Outhouse and outdoor shower/bathing facilities are nearby.<br><br>Cabin rental $55+tax/night     <br><br>For longer-term stay, to combine with private training/appointments or custom arrangements, we can create the program together to suit your needs.<br><br>To inquire or to make a reservation <a href="http://joe@joehiscott.com" class="t-link">contact Joe</a>
           </p>
         </div>
       </div>
